--- a/kaggle-sf-crime-prediction_baseline.ipynb
+++ b/kaggle-sf-crime-prediction_baseline.ipynb
@@ -2231,7 +2231,12 @@
     "\n",
     "    xgb.fit(X, Y, eval_set=[(X_train[s:e], Y_train[s:e])])\n",
     "\n",
-    "    cross_valid_result.append(xgb.predict_proba(X_test))"
+    "    cross_valid_result.append(xgb.predict_proba(X_test))\n",
+    "    \n",
+    "Y_test_pred = 0\n",
+    "for i in range(5):\n",
+    "    Y_test_pred += cross_valid_result[i]\n",
+    "Y_test_pred = Y_test_pred/5"
    ]
   }
  ],
