StratifiedKFold shuffle = True

--- a/kaggle-sf-crime-prediction_baseline.ipynb
+++ b/kaggle-sf-crime-prediction_baseline.ipynb
@@ -2038,7 +2038,7 @@
    "outputs": [],
    "source": [
     "scores = cross_val_score(xgb, X_train, Y_train, \n",
-    "                         cv=StratifiedKFold(n_splits=5), \n",
+    "                         cv=StratifiedKFold(n_splits=3, shuffle=True, random_state=1), \n",
     "                         scoring = \"neg_log_loss\", n_jobs=6)"
    ]
   },
@@ -2256,7 +2256,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10 (default, Nov 14 2022, 12:59:47) \n[GCC 9.4.0]"
+   "version": "3.8.10"
   },
   "vscode": {
    "interpreter": {
