add same location and date feature

--- a/kaggle-sf-crime-prediction_baseline.ipynb
+++ b/kaggle-sf-crime-prediction_baseline.ipynb
@@ -1218,6 +1218,33 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\" 12/11 \"\"\"\n",
+    "def find_same_date_and_loc(df):\n",
+    "    temp = np.zeros(df.values.shape[0])\n",
+    "    for i in range(df.values.shape[0]):\n",
+    "        if temp[i] != 0: \n",
+    "            continue\n",
+    "        count = 1\n",
+    "        idx = [i]\n",
+    "        for j in range(i+1, min(i+40, temp.shape[0])):\n",
+    "            if df[\"Dates\"][i] == df[\"Dates\"][j] :\n",
+    "                if df[\"PdDistrict\"][i] == df[\"PdDistrict\"][j]:\n",
+    "                    idx.append(j)\n",
+    "                    count+=1\n",
+    "            else:\n",
+    "                temp[idx] = count\n",
+    "                break\n",
+    "    return np.array(temp, dtype=np.int64)\n",
+    "test_df[\"same_date_and_loc\"] = find_same_date_and_loc(test_df)\n",
+    "train_df[\"same_date_and_loc\"] = find_same_date_and_loc(train_df)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1966,16 +1993,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import sklearn\n",
-    "print(sklearn.metrics.SCORERS.keys())"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -2111,7 +2128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 295,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-09-17T11:06:54.120643Z",
@@ -2140,7 +2157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 296,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-09-17T11:07:37.190126Z",
@@ -2236,7 +2253,8 @@
     "Y_test_pred = 0\n",
     "for i in range(5):\n",
     "    Y_test_pred += cross_valid_result[i]\n",
-    "Y_test_pred = Y_test_pred/5"
+    "Y_test_pred = Y_test_pred/5\n",
+    "sample_submission.to_csv('data/submission_ensemble.csv', index=False)"
    ]
   }
  ],
