--- a/kaggle-sf-crime-prediction_baseline.ipynb
+++ b/kaggle-sf-crime-prediction_baseline.ipynb
@@ -2223,7 +2223,7 @@
     "\n",
     "for i in range(5):\n",
     "    s, e = valid_data_size*i, valid_data_size*(i+1)\n",
-    "    xgb = XGBClassifier(\n",
+    "    xgb_ensemble = XGBClassifier(\n",
     "        early_stopping_rounds=10,\n",
     "        n_estimators=300, \n",
     "        objective=\"multi:softprob\", \n",
@@ -2246,9 +2246,9 @@
     "    X = pd.concat([X_train[:s],X_train[e:]])\n",
     "    Y = pd.concat([Y_train[:s],Y_train[e:]])\n",
     "\n",
-    "    xgb.fit(X, Y, eval_set=[(X_train[s:e], Y_train[s:e])])\n",
+    "    xgb_ensemble.fit(X, Y, eval_set=[(X_train[s:e], Y_train[s:e])])\n",
     "\n",
-    "    cross_valid_result.append(xgb.predict_proba(X_test))\n",
+    "    cross_valid_result.append(xgb_ensemble.predict_proba(X_test))\n",
     "    \n",
     "Y_test_pred = 0\n",
     "for i in range(5):\n",
